Cleanup. Consolidate version references. Remove dead code. Remove dead todos.